// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a single input 1`] = `
<form
  className="flex-grow space-y-5"
  onSubmit={[Function]}
>
  <div
    className="flex flex-1 flex-col justify-between "
  >
    
  </div>
</form>
`;

exports[`should render buttons 1`] = `
<form
  className="flex-grow space-y-5"
  onSubmit={[Function]}
>
  <div
    className="flex flex-1 flex-col my-2"
  >
    <label
      className="flex"
    >
      
    </label>
    <textarea
      className="flex flex-1 w-full outline-none"
      onChange={[Function]}
      value=""
    />
  </div>
  <button>
    foo
  </button>
  <button>
    bar
  </button>
</form>
`;

exports[`should render empty form 1`] = `
<form
  className="flex-grow space-y-5"
  onSubmit={[Function]}
>
  <div
    className="flex flex-1 flex-col my-2"
  >
    <label
      className="flex"
    >
      
    </label>
    <textarea
      className="flex flex-1 w-full outline-none"
      onChange={[Function]}
      value=""
    />
  </div>
  Submit
</form>
`;

exports[`should render no button 1`] = `
<form
  className="flex-grow space-y-5"
  onSubmit={[Function]}
>
  <div
    className="flex flex-1 flex-col my-2"
  >
    <label
      className="flex"
    >
      
    </label>
    <textarea
      className="flex flex-1 w-full outline-none"
      onChange={[Function]}
      value=""
    />
  </div>
</form>
`;

exports[`should render single all types 1`] = `
<form
  className="flex-grow space-y-5"
  onSubmit={[Function]}
>
  <label
    className="flex font-semibold max-w-[80%]"
  >
    
  </label>
  <div
    className="flex flex-1 flex-col justify-between "
  >
    <label
      className="flex mb-[0.625rem]"
      dangerouslySetInnerHTML={
        Object {
          "__html": "string",
        }
      }
    />
  </div>
  <div
    className="flex flex-1 flex-col justify-between "
  >
    <label
      className="flex mb-[0.625rem]"
      dangerouslySetInnerHTML={
        Object {
          "__html": "number",
        }
      }
    />
  </div>
  <div
    className="relative flex flex-1"
  >
    <div
      className="flex items-center flex-1 !rounded-[0.3rem] h-[2.5rem] basis-[2.5rem] invalid:border-red-500 invalid:text-red-500"
    >
      <label
        className="flex cursor-pointer"
      >
        <span
          className="ml-2"
          dangerouslySetInnerHTML={
            Object {
              "__html": "boolean",
            }
          }
        />
      </label>
    </div>
  </div>
  <div
    className="p-2"
  >
    <label
      className="flex mb-5"
    >
      Localized
    </label>
    <div
      className="ml-2 flex-1 space-y-5"
    />
    <div
      className="flex w-full justify-end mt-5"
    >
      <span
        className="underline"
      >
        Add item
      </span>
    </div>
  </div>
  <label
    className="flex font-semibold max-w-[80%]"
  >
    object
  </label>
  <div
    className="flex flex-1 flex-col justify-between "
  />
  <label
    className="flex font-semibold max-w-[80%]"
  >
    objectWithAdditionalProperties
  </label>
  <div>
    Add a property
  </div>
</form>
`;

exports[`should set custom components 1`] = `
<form
  className="flex-grow space-y-5"
  onSubmit={[Function]}
>
  <div>
    Custom FieldText
  </div>
  Submit
</form>
`;

exports[`should set locales 1`] = `
<form
  className="flex-grow space-y-5"
  onSubmit={[Function]}
>
  <div
    className="flex flex-1 flex-col justify-between "
  >
    
  </div>
  SUBMIT
</form>
`;

exports[`should use ui:widgets 1`] = `
<form
  className="flex-grow space-y-5"
  onSubmit={[Function]}
>
  <label
    className="flex font-semibold max-w-[80%]"
  >
    
  </label>
  <div
    className="p-2"
  >
    <label
      className="flex mb-5"
    >
      array
    </label>
    <div
      className="flex flex-row flex-wrap"
    />
    <div
      className="flex w-full justify-end mt-5"
    >
      <span
        className="underline"
      >
        Add item
      </span>
    </div>
  </div>
  <div
    className="flex flex-1 flex-col justify-between "
  >
    <label
      className="flex mb-[0.625rem]"
      dangerouslySetInnerHTML={
        Object {
          "__html": "upload",
        }
      }
    />
    <div
      className="ant-input"
    >
      <div
        className="relative p-2 "
      >
        <div
          className="flex flex-row border-4 border-dashed border-gray-200 !rounded-[0.3rem] min-h-[50px] p-2 items-center"
        >
          <div
            className="mr-2"
          />
          Choose file
        </div>
        <input
          accept="image/jpeg"
          className="absolute top-0 left-0 right-0 bottom-0 opacity-0 cursor-pointer"
          multiple={false}
          onChange={[Function]}
          type="file"
        />
      </div>
    </div>
  </div>
  <div
    className="flex flex-1 flex-col justify-between "
  >
    <label
      className="flex mb-[0.625rem]"
      dangerouslySetInnerHTML={
        Object {
          "__html": "textarea",
        }
      }
    />
  </div>
  <div
    className="flex flex-1 flex-col justify-between "
  >
    <label
      className="flex mb-[0.625rem]"
      dangerouslySetInnerHTML={
        Object {
          "__html": "select",
        }
      }
    />
    Foo
    Bar
  </div>
  <div
    className="flex flex-1 flex-col justify-between flex-1"
  >
    <label
      className="flex mb-[0.625rem]"
      dangerouslySetInnerHTML={
        Object {
          "__html": "date",
        }
      }
    />
  </div>
  Submit
</form>
`;
